# gpt-from-scratch

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
components/micrograd/: engine.py  nn.py
micrograd/: nn.py
notebooks/: micrograd_from_scratch.ipynb
tests/: test_micrograd.py
