[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "A small GPT implemented from scratch in PyTorch (Karpathy's Zero to Hero)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "torch>=2.12.0",
]
