[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "A small GPT implemented from scratch in PyTorch (Karpathy's Zero to Hero)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "torch>=2.12.0",
]

[tool.uv]
# Supply-chain cooldown: never resolve packages published in the last ~7 days.
# Bump this date deliberately when you want to pull in newer releases.
exclude-newer = "2026-06-06T00:00:00Z"

[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
# The project isn't pip-installed (no build backend), so add the repo root to the path
# for `import components...` and keep test discovery scoped to tests/.
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88
# Notebooks are learning scratchpads (code-along); don't hold them to production lint
# rules. Linting applies to the .py modules. nbstripout still strips notebook outputs.
extend-exclude = ["*.ipynb"]
force-exclude = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
